fix overflow in header and add menu class to footer

--- a/css/style.scss
+++ b/css/style.scss
@@ -744,6 +744,7 @@ h4 {
 	position: sticky;
 	top: 0;
 	z-index: 0;
+	overflow-x: clip;
 
 	h1 {
 		font-size: 2rem;
